@@ -1,3 +1,8 @@
+2007-07-28  Simon Martin  <simartin@users.sourceforge.net>
+
+	PR c++/30917
+	* g++.dg/lookup/friend11.C: New test.
+
 2007-07-27  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/32346
